--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "Comfortaa";
+    src: url("../src/fonts/Comfortaa-Medium.ttf");
+  }
+  
+  @font-face {
+    font-family: "Comfortaa-Regular";
+    src: url("../src/fonts/Comfortaa-Regular.ttf");
+  }
+  
+  @font-face {
+    font-family: "Comfortaa-Bold";
+    src: url("../src/fonts/Comfortaa-Bold.ttf");
+  }
+  
+  @font-face {
+    font-family: "Comfortaa-Light";
+    src: url("../src/fonts/Comfortaa-Light.ttf");
+  }
+
